--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.leftmenu {
+.left {
     position: absolute; /* Абсолютное позиционирование */
     top: 20px; /* Положение от верхнего края */
     left: 10px; /* Положение от левого края */
@@ -6,14 +6,14 @@
     border: 1px solid #000; /* Параметры рамки */
     padding: 10px; /* Поля вокруг текста */
 }
-.bottommenu {
+.bottom {
     position: absolute; /* Относительное позиционирование */
     padding: 10px; /* Поля вокруг текста */
     color: white; /* Цвет текста */
     border: 1px solid #000; /* Параметры рамки */
     margin: 20px 240px 0 140px; /* Отступы вокруг блока */
 }
-.topmenu {
+.top {
     position: absolute; /* Абсолютное позиционирование */
     top: 20px; /* Положение от верхнего края */
     right: 10px; /* Положение от правого края */
