--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,26 @@
-.left {
+.leftmenu {
     position: absolute; /* Абсолютное позиционирование */
-    top: 20px; /* Положение от верхнего края */
-    left: 10px; /* Положение от левого края */
+    top: 200px; /* Положение от верхнего края */
+    left: 100px; /* Положение от левого края */
     width: 100px; /* Ширина блока */
     border: 1px solid #000; /* Параметры рамки */
     padding: 10px; /* Поля вокруг текста */
 }
-.bottom {
+.bottommenu {
     position: absolute; /* Относительное позиционирование */
+    bottom: 20px; /* Положение от верхнего края */
+    left: 300px; /* Положение от левого края */
+    width: 1000px; /* Ширина блока */
     padding: 10px; /* Поля вокруг текста */
     color: white; /* Цвет текста */
     border: 1px solid #000; /* Параметры рамки */
     margin: 20px 240px 0 140px; /* Отступы вокруг блока */
 }
-.top {
+.topmenu {
     position: absolute; /* Абсолютное позиционирование */
     top: 20px; /* Положение от верхнего края */
-    right: 10px; /* Положение от правого края */
-    width: 200px; /* Ширина блока */
+    left: 300px; /* Положение от левого края */
+    width: 1000px; /* Ширина блока */
     border: 1px solid black; /* Параметры рамки */
     padding: 10px; /* Поля вокруг текста */
 }
